Fix background image spacing issue

--- a/app.css
+++ b/app.css
@@ -1,3 +1,16 @@
+body, html {
+  margin: 0;   /* removes default browser spacing */
+  padding: 0;
+}
+
+.page-background {
+  background-image: url('https://th.bing.com/th/id/OIF.DByIBxWAivjHzMuHh89EKg?w=235&h=183&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+}
+
 .home{
     text-align: center;
     color: whitesmoke;
@@ -13,16 +26,11 @@
     padding-left: 15px;
     padding-right: 15px;
 }
-
-.page-background {
-    background-image: url('https://th.bing.com/th/id/OIF.DByIBxWAivjHzMuHh89EKg?w=235&h=183&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3https://th.bing.com/th/id/OIF.DByIBxWAivjHzMuHh89EKg?w=235&h=183&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3'); 
-    background-size: cover; 
-    background-position: center; 
-    height: 100vh; 
-    width: 100%;
-}
 .pheq{
     color:aliceblue;
     font-weight: bold;
     text-align: center;
+}
+h1, h2, h3, p {
+  margin-top: 0;
 }
